# skcomms

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY-NOTES.md  Dockerfile  LICENSE  MISSION.md  README.md  SECURITY.md  SOP.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml  pytest.yml  qa.yml  secret-scan.yml
contrib/systemd/: skcomms-api.service  skcomms-housekeep.service  skcomms-housekeep.timer
docs/: ARCHITECTURE.md  DISCORD_SETUP.md  HANDOFF-skfed-s2s-opus-delivery.md  PAIRING.md  SYNCTHING_TOPOLOGY.md  access-plane-p7.md  access-plane-p8.md  cot-bridge.md  crypto-architecture.md  federation-data-comms-architecture.md  funnel-privacy.md  mode-b-tailnet-deploy.md  node_registry.example.yml  skfed-consent-design.md  skfed-federation-guide.md  state-sync-rearch-plan.md  tak-vs-skfed-analysis.md
docs/deploy-plan/: skcomms-bulletproof-deploy.md
docs/rfcs/: RFC-0001-pq-ratchet-metadata-dual-identity.md
docs/superpowers/plans/: 2026-06-10-qr-pairing.md  2026-06-13-ble-mesh-p1-core.md  2026-06-13-lora-l1-core.md  2026-06-13-skglossa-g1-core.md  2026-06-13-skglossa-g2-macro-lexicon.md  2026-06-13-skglossa-g4-emergent.md  2026-06-13-tier3-adapter-runtime.md
docs/superpowers/specs/: 2026-06-13-ble-mesh-proximity-transport-design.md  2026-06-13-lora-meshtastic-transport-design.md  2026-06-13-skglossa-design.md
scripts/: backfill_file_locations.py  bootstrap.sh  discord_smoke.py  drain_orphan_outbox.py  mode-b-setup.sh  refresh-constraints.sh  skfed-dns.sh  skfed-neutral-addresses.sh  skfed-sync-rearch.sh  telegram_smoke.py  test_skfed_sync_rearch.sh
scripts/templates/: consent-mode.conf.tmpl  realms.yml.tmpl  tailscale-serve.sh.tmpl
src/skcomms/: __init__.py  ack.py  anon_queue.py  anon_transport.py  api.py  capabilities.py  capauth_validator.py  cli.py  cluster.py  compression.py  config.py  consent.py  consent_banfeeds.py  consent_captcha.py  consent_greylist.py  consent_group_gate.py  consent_groups.py  consent_moderation.py  consent_pipeline.py  consent_policy.py  consent_requests.py  consent_runtime.py  consent_tiering.py  consent_tokens.py  core.py  cot.py  cot_agent.py  cot_client.py  cot_pki.py  cot_server.py  cot_service.py  crypto.py  crypto_suites.py  did_router.py  discovery.py  envelope.py  federation.py  geo.py  grants.py  heartbeat.py  (+48 more)
src/skcomms/access/: __init__.py  audit.py  config.py  exec.py  files.py  grants.py  knowledge.py  registry.py  routing.py  server.py  wiring.py
src/skcomms/adapters/: __init__.py  base.py  discord.py  factory.py  fake.py  matrix.py  models.py  registry.py  slack.py  telegram.py
src/skcomms/glossa/: __init__.py  codebook.py  codec.py  emergent.py  gloss.py  handshake.py  macros.py  message.py  session.py
src/skcomms/transports/: __init__.py  audio_track.py  broker_server.py  file.py  http_s2s.py  nostr.py  p2p_connector.py  p2p_manager.py  p2p_session.py  signaling_base.py  signaling_broker.py  signaling_mailbox.py  syncthing.py  tailscale.py  video_track.py  webrtc.py  webrtc_media.py  websocket.py
src/skcomms/transports/ble/: __init__.py  gatt.py  identity.py  node.py  noise.py  protocol.py  radio.py  relay.py
src/skcomms/transports/lora/: __init__.py  addressing.py  framing.py  interface.py  meshtastic_iface.py  store.py  transport.py
tests/: conftest.py  test_access_exec.py  test_access_files.py  test_access_nonce_durable.py  test_access_rbac.py  test_access_routing.py  test_access_server.py  test_access_wiring.py  test_ack_bind.py  test_ack_sender_binding.py  test_adapter_factory.py  test_adapter_fake.py  test_anon_queue.py  test_anon_transport.py  test_api_access_token.py  test_api_consent.py  test_api_consent_token_gate.py  test_api_cors.py  test_api_federation_inbox.py  test_api_health.py  test_api_send_signed_wire.py  test_api_skfed_directory.py  test_backfill_file_locations.py  test_ble_fragment.py  test_ble_gatt.py  test_ble_identity.py  test_ble_mesh.py  test_ble_noise.py  test_ble_pairing_bundle.py  test_ble_protocol.py  test_ble_radio.py  test_ble_relay.py  test_broker_server.py  test_capabilities.py  test_capauth_failclosed.py  test_capauth_key_reconcile.py  test_capauth_resolution.py  test_channel_adapter.py  test_config.py  test_consent.py  (+139 more)
