[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skcomms"
version = "0.0.1"
description = "Realm-scoped, three-tier identity, signed-envelope routing protocol for sovereign AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "smilinTux.org", email = "hello@smilintux.org"},
]
keywords = [
    "ai", "agent", "communication", "realm", "routing",
    "identity", "pgp", "envelope", "sovereign", "syncthing",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "skcomm>=0.1.2",
]

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "rich>=13.0",
]
crypto = [
    "pgpy>=0.6.0",
    "capauth>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "pgpy>=0.6.0",
    "click>=8.1",
    "rich>=13.0",
]
all = [
    "click>=8.1",
    "rich>=13.0",
    "pgpy>=0.6.0",
    "capauth>=0.1.0",
]

[project.scripts]
skcomms = "skcomms.cli:main"

[project.urls]
Homepage = "https://smilintux.org"
Repository = "https://github.com/smilinTux/skcomms"
Issues = "https://github.com/smilinTux/skcomms/issues"
Changelog = "https://github.com/smilinTux/skcomms/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806", "N803", "N817", "E741", "F821", "F841", "F401", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
