[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skcomms"
version = "0.1.3"
description = "Sovereign communications for AI agents — multi-channel transport + FQID realm addressing"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "smilinTux", email = "chefboyrdave2.1@gmail.com"},
]
keywords = [
    "ai", "agent", "communication", "realm", "routing",
    "identity", "pgp", "envelope", "sovereign", "syncthing",
    "p2p", "encrypted", "transport", "messaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "psutil>=5.9",
    "pyyaml>=6.0,<7.0",
    "segno>=1.5",
    "dissononce>=0.34.3",
]

[project.optional-dependencies]
skcapstone = [
    "skcapstone>=0.6.8",
]
cli = [
    "click>=8.1",
    "rich>=13.0",
]
crypto = [
    "capauth>=0.1.0",
    "pgpy>=0.6.0",
]
nostr = [
    "websockets>=12.0",
    "cryptography>=42.0,<44.0",
]
websocket = [
    "websockets>=12.0",
]
webrtc = [
    "aiortc>=1.9.0",
    "websockets>=12.0",
]
telegram = [
    # Telethon: Telegram user-session client used by TelegramAdapter.
    # Installs: pip install "skcomms[telegram]"
    "telethon>=1.36",
]
discord = [
    # discord.py: Discord Gateway + REST client used by DiscordAdapter.
    # Installs: pip install "skcomms[discord]"
    "discord.py>=2.3",
]
discovery = [
    "zeroconf>=0.131.0",
]
meshtastic = ["meshtastic>=2.3"]
api = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0",
]
all = [
    "click>=8.1",
    "rich>=13.0",
    "psutil>=5.9",
    "capauth>=0.1.0",
    "pgpy>=0.6.0",
    "websockets>=12.0",
    "cryptography>=42.0,<44.0",
    "zeroconf>=0.131.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0",
    "aiortc>=1.9.0",
    "telethon>=1.36",
    "discord.py>=2.3",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "fastapi>=0.109.0,<1.0.0",
    "httpx>=0.27",
    "pgpy>=0.6.0",
    "websockets>=12.0",
    "cryptography>=42.0,<44.0",
]

[project.scripts]
skcomms = "skcomms.cli:main"
skcomms-mcp = "skcomms.mcp_server:main"
# Legacy aliases — keep working during transition
skcomm-mcp = "skcomms.mcp_server:main"

[project.urls]
Homepage = "https://smilintux.org"
Repository = "https://github.com/smilinTux/skcomms"
Issues = "https://github.com/smilinTux/skcomms/issues"
Changelog = "https://github.com/smilinTux/skcomms/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skcomms = ["SKILL.md"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806", "N803", "N817", "E741", "F821", "F841", "F401", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
